Nicer layout. Started working on Command Center, a friendly way to send commands. LED done for now.

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "react": "^16.8.6",
+    "react-color": "^2.17.3",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
     "scratch-vm": "^0.2.0-prerelease.20190722173823"
