--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "dependencies": {
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
+    "rc-slider": "^8.6.13",
     "react": "^16.8.6",
     "react-color": "^2.17.3",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
-    "scratch-vm": "^0.2.0-prerelease.20190722173823"
+    "scratch-vm": "^0.2.0-prerelease.20190722173823",
+    "uuid": "^3.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
