--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "scratch-pure",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://knandersen.github.io/friendly-lego-ble",
   "dependencies": {
+    "gh-pages": "^2.0.1",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "rc-slider": "^8.6.13",
@@ -17,7 +19,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
